@@ -117,3 +117,7 @@ Yes. To connect your social accounts to Yotpo, just log into yotpo.com, and clic
 
 = 1.1.1 - 15/05/2014 =
 * Bug fixes. 
+
+= 1.1.2 - 21/05/2014 =
+* Exporting reviews bug fix. 
+
