@@ -156,3 +156,8 @@ Alon
 Alon
 1) Fix export review bug.  
 
+2014-05-21
+----
+Alon
+1) Change the way the exported reviews file is downloaded. 
+
